# learning-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  LICENSE  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml  mingw.yml
app-hello-world/: CMakeLists.txt
app-hello-world/learning-vcpkg/hello-world/: main.cpp
cmake/: CMakePresets.base.json  config.cmake.in  mingw-windows-x64.cmake  mingw-windows-x86.cmake
lib-example/: CMakeLists.txt
lib-example/learning-vcpkg/example/: example.cpp  example.hpp
usage/consume-component-example/: CMakeLists.txt  main.cpp
usage/consume-component-hello-world/: CMakeLists.txt  CMakePresets.json
usage/consume-lib-example/: CMakeLists.txt  CMakePresets.json
usage/vcpkg-ports/learning-vcpkg/: portfile.cmake  usage  vcpkg.json
